--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ WallpaperPicker/gen/
 WallpaperPicker/.project.properties
 bin/
 .idea/
+.gradle/
 local.properties
-gradle/
 build/
 gradlew*
 .DS_Store
